added map, need to add reduce

--- a/portfolio-assignment/pauwlsky-portfolio/index.html
+++ b/portfolio-assignment/pauwlsky-portfolio/index.html
@@ -27,6 +27,8 @@
             {{url}}</p></a>
           <h3>Skills Used</h3>
           <p class="skills">{{#join}}{{skills}}{{/join}}</p>
+          <div class="skills-images">
+          </div>
         </div>
         <hr/>
       </article>
@@ -54,7 +56,6 @@
     <div id="project" class="container">
       <h1 class="header">My Current Front-End Work</h1>
     </div>
-
 
     <div class="modal">
       <div class="modal-content">
