animations finally working good enough. Needs adjustment for mobile

--- a/portfolio-assignment/pauwlsky-portfolio/index.html
+++ b/portfolio-assignment/pauwlsky-portfolio/index.html
@@ -27,8 +27,8 @@
             {{url}}</p></a>
           <h3>Skills Used</h3>
           <p class="skills">{{#join}}{{skills}}{{/join}}</p>
-          <div class="skills-images">
-          </div>
+        </div>
+        <div class="skills-images window">
         </div>
         <hr/>
       </article>
