completed stretch goals

--- a/class-19-lab-spa-routing/pair-assignment/nicholle_keenan/index.html
+++ b/class-19-lab-spa-routing/pair-assignment/nicholle_keenan/index.html
@@ -23,6 +23,9 @@
         <a href="#" class="read-on">Read on &rarr;</a>
       </article>
     </script>
+    <script id="author-template" type="text/x-handlebars-template">
+      <li><strong>{{name}}</strong>: {{numWords}} words written</li>
+    </script>
   </head>
   <body>
     <header class="site-header clearfix">
@@ -37,6 +40,7 @@
         <ul>
           <li class="tab" data-content="articles"><a href="/" class="icon-home"> Home</a></li>
           <li class="tab" data-content="about"><a href="/about" class="icon-address-book"> About</a></li>
+          <li class="tab" data-content="about"><a href="/admin" class="icon-checkmark">Admin</a></li>
           <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
           <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
         </ul>
@@ -72,6 +76,15 @@
           </ul>
         </section>
       </section>
+      <section id="blog-stats">
+        <h1>Blog Stats</h1>
+        <dt>Total articles:</dt> <dd class="articles"></dd>
+        <dt>Total words:</dt> <dd class="words"></dd>
+        <h2>Author Stats</h2>
+        <p><em>Details on who is writing, and how much writing they are doing...</em></p>
+        <ul class="author-stats">
+        </ul>
+      </section>
     </main>
     <footer>
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
@@ -89,6 +102,7 @@
     <script src="/scripts/articleView.js"></script>
     <script src='/scripts/articleController.js'></script>
     <script src='/scripts/aboutController.js'></script>
+    <script src='scripts/adminController.js'></script>
     <script src="/vendor/scripts/page.js"></script>
     <script src="/scripts/routes.js"></script>
 
